Bug 1063046 - Simplify format change for tiled layers. r=mstange